--- a/styles/style_main.css
+++ b/styles/style_main.css
@@ -4,9 +4,7 @@ body {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 
-#header
-{
-    
+#header {
     width: 100%;
     height: 125px;
     background-color: #FF9C0F;
@@ -17,16 +15,14 @@ body {
     filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=180, Strength=5);
 }
 
-#container
-{
+#container {
     width: 800px;
     /*border: 1px solid black;*/
     margin-left: auto;
     margin-right: auto;
 }
 
-#corps
-{
+#corps {
     width: 100%;
     background-color: white;
     -moz-box-shadow: 0px 2px 5px 0px #656565;
@@ -54,8 +50,7 @@ body {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 
-#corps a:hover
-{
+#corps a:hover {
     text-decoration: underline;
     color: #247BFF;
 }
@@ -92,8 +87,7 @@ body {
 }
 
 /* --- Formulaires --- */
-#corps .star_field:before
-{
+#corps .star_field:before {
     content: "* ";
     color: red; 
 }
@@ -103,9 +97,8 @@ body {
     margin-top: 10px;
 }
 
-#corps .form td
-{
-    padding-bottom: 5px;
+#corps .form td {
+    padding-bottom: 10px;
 }
 
 
@@ -127,12 +120,12 @@ body {
     background: #FFFF9D;
 }
 
-#corps fieldset
-{
+#corps fieldset {
     border-radius: 8px;
     margin: 5px;
     margin-left: 10px;
     margin-right: 10px;
+    margin-bottom: 15px;
     border-color: #B4B4B4;
     border-width: 2px;
     border-style: dotted solid double;
