--- a/styles/style_main.css
+++ b/styles/style_main.css
@@ -16,7 +16,7 @@ body {
 }
 
 #container {
-    width: 800px;
+    width: 1100px;
     /*border: 1px solid black;*/
     margin-left: auto;
     margin-right: auto;
@@ -134,7 +134,7 @@ body {
 
 
 input[type="submit"] {
-    padding: 5px 15px;
+    padding: 8px 15px;
     background:#ccc;
     border:0 none;
     cursor:pointer;
@@ -142,5 +142,6 @@ input[type="submit"] {
     border-radius: 5px;
     height: inherit;
     width: inherit;
-    font-size: 40px;
+    font-size: 16px;
+    font-weight: bold;
 }
